--- a/README
+++ b/README
@@ -1,1 +1,11 @@
 A simple Scheme Interpreter written in C#.
+
+Features:
+
++ Scheme primitives
+
++ Let and Let*
+
++ Lexical scope and lambda expressions
+
++ Tested on the SICP metacircular-evaluator
